--- a/Byggo(v1)/Base.lproj/LaunchScreen.storyboard
+++ b/Byggo(v1)/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -13,11 +16,52 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Byggo.co IOS APP" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iXF-yu-mra">
+                                <rect key="frame" x="244" y="336" width="536" height="96"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="536" id="2Tq-uw-Vhx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="43"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="© 2016 BEIM Apps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EAe-Ia-wgR">
+                                <rect key="frame" x="369" y="724" width="287" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="287" id="pzy-nr-nh4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="V: 1.0 Build 1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZ8-O9-AjF">
+                                <rect key="frame" x="917" y="724" width="87" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="87" id="7ra-cL-gaQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="EAe-Ia-wgR" firstAttribute="baseline" secondItem="zZ8-O9-AjF" secondAttribute="baseline" id="2hK-zD-XeL"/>
+                            <constraint firstItem="iXF-yu-mra" firstAttribute="centerX" secondItem="EAe-Ia-wgR" secondAttribute="centerX" id="7Aj-pg-ogT"/>
+                            <constraint firstItem="iXF-yu-mra" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="7D5-jr-3id"/>
+                            <constraint firstItem="iXF-yu-mra" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="A3H-fK-bas"/>
+                            <constraint firstAttribute="bottom" secondItem="EAe-Ia-wgR" secondAttribute="bottom" constant="20" symbolic="YES" id="FQg-Pg-98R"/>
+                            <constraint firstItem="EAe-Ia-wgR" firstAttribute="firstBaseline" secondItem="zZ8-O9-AjF" secondAttribute="firstBaseline" id="PRR-wD-wfR"/>
+                            <constraint firstItem="zZ8-O9-AjF" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="dZQ-ls-P6L"/>
+                            <constraint firstItem="zZ8-O9-AjF" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="704" id="km9-cX-YEJ"/>
+                            <constraint firstItem="iXF-yu-mra" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="316" id="wVD-G4-HpM"/>
+                        </constraints>
                     </view>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
