--- a/Byggo(v1)/Base.lproj/Main.storyboard
+++ b/Byggo(v1)/Base.lproj/Main.storyboard
@@ -241,7 +241,7 @@
                         <outlet property="table" destination="U0n-i9-0qg" id="Hoq-nX-hEE"/>
                         <outlet property="tableView" destination="U0n-i9-0qg" id="6q4-Q8-ZCi"/>
                         <outlet property="tagBilledButton" destination="S0f-1m-Ivf" id="lb8-hW-Xe5"/>
-                        <segue destination="Xyk-AI-2Du" kind="show" identifier="FilListe" id="mUr-nk-Svr"/>
+                        <segue destination="dRq-Wo-bLP" kind="show" identifier="FilListe" id="C3F-KH-reM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZJ5-7f-9Kh" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -249,61 +249,66 @@
             <point key="canvasLocation" x="3273.5" y="731"/>
         </scene>
         <!--Fil-->
-        <scene sceneID="b1F-dw-F1e">
+        <scene sceneID="UZI-Py-5hk">
             <objects>
-                <tableViewController id="Xyk-AI-2Du" customClass="fil" customModule="Byggo_v1_" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="191" sectionHeaderHeight="28" sectionFooterHeight="28" id="F1X-qu-qJW">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FSr-qs-Y5l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <collectionViewController id="dRq-Wo-bLP" customClass="fil" customModule="Byggo_v1_" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="uMX-mh-FcD">
                         <rect key="frame" x="0.0" y="0.0" width="703" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="filCell" rowHeight="191" id="Czj-Xa-TWg" customClass="filCell" customModule="Byggo_v1_" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="703" height="191"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Czj-Xa-TWg" id="4Ly-0w-9vr">
-                                    <rect key="frame" x="0.0" y="0.0" width="703" height="191"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="h9R-FB-wnL">
+                            <size key="itemSize" width="250" height="200"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="25" minY="25" maxX="25" maxY="25"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="filCell" id="ePG-2c-oKL" customClass="filCell" customModule="Byggo_v1_" customModuleProvider="target">
+                                <rect key="frame" x="25" y="89" width="250" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="250" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YTc-kn-lqK">
-                                            <rect key="frame" x="8" y="0.0" width="241" height="183"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="241" id="qHE-fM-dpo"/>
-                                            </constraints>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7nf-hx-lcK">
+                                            <rect key="frame" x="8" y="8" width="234" height="137"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fil Navn" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wUw-No-H3P">
-                                            <rect key="frame" x="257" y="8" width="438" height="35"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8nh-9J-Dcu">
+                                            <rect key="frame" x="8" y="153" width="234" height="39"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="35" id="RNe-QI-jIA"/>
+                                                <constraint firstAttribute="height" constant="39" id="Hc7-V2-u50"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstItem="YTc-kn-lqK" firstAttribute="top" secondItem="4Ly-0w-9vr" secondAttribute="top" id="Kcs-zq-Bte"/>
-                                        <constraint firstItem="YTc-kn-lqK" firstAttribute="leading" secondItem="4Ly-0w-9vr" secondAttribute="leadingMargin" id="aPv-UI-Lya"/>
-                                        <constraint firstItem="wUw-No-H3P" firstAttribute="top" secondItem="4Ly-0w-9vr" secondAttribute="topMargin" id="gYq-Np-hP8"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="YTc-kn-lqK" secondAttribute="bottom" constant="-0.5" id="peA-Qq-n9q"/>
-                                        <constraint firstItem="wUw-No-H3P" firstAttribute="trailing" secondItem="4Ly-0w-9vr" secondAttribute="trailingMargin" id="tcw-jZ-0vc"/>
-                                        <constraint firstItem="wUw-No-H3P" firstAttribute="leading" secondItem="YTc-kn-lqK" secondAttribute="trailing" constant="8" symbolic="YES" id="vrM-CQ-yPj"/>
-                                    </constraints>
-                                </tableViewCellContentView>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="7nf-hx-lcK" firstAttribute="leading" secondItem="8nh-9J-Dcu" secondAttribute="leading" id="Fa1-3u-qdK"/>
+                                    <constraint firstItem="7nf-hx-lcK" firstAttribute="trailing" secondItem="8nh-9J-Dcu" secondAttribute="trailing" id="Sp7-ST-7tz"/>
+                                    <constraint firstItem="7nf-hx-lcK" firstAttribute="trailing" secondItem="ePG-2c-oKL" secondAttribute="trailingMargin" id="XI5-fd-b9i"/>
+                                    <constraint firstItem="7nf-hx-lcK" firstAttribute="top" secondItem="ePG-2c-oKL" secondAttribute="topMargin" id="Ytk-2L-Byk"/>
+                                    <constraint firstItem="7nf-hx-lcK" firstAttribute="leading" secondItem="ePG-2c-oKL" secondAttribute="leadingMargin" id="kbp-rp-OXf"/>
+                                    <constraint firstItem="8nh-9J-Dcu" firstAttribute="top" secondItem="7nf-hx-lcK" secondAttribute="bottom" constant="8" symbolic="YES" id="l0l-8g-C5Z"/>
+                                    <constraint firstItem="8nh-9J-Dcu" firstAttribute="bottom" secondItem="ePG-2c-oKL" secondAttribute="bottomMargin" id="ulP-Y1-fBg"/>
+                                </constraints>
                                 <connections>
-                                    <outlet property="filNavn" destination="wUw-No-H3P" id="xmP-X8-O5S"/>
-                                    <outlet property="typeImage" destination="YTc-kn-lqK" id="ghZ-h9-M0v"/>
+                                    <outlet property="filNavn" destination="8nh-9J-Dcu" id="KRm-5a-fk9"/>
+                                    <outlet property="typeImage" destination="7nf-hx-lcK" id="LTH-dB-Ohq"/>
                                 </connections>
-                            </tableViewCell>
-                        </prototypes>
+                            </collectionViewCell>
+                        </cells>
                         <connections>
-                            <outlet property="dataSource" destination="Xyk-AI-2Du" id="hYC-kM-2cZ"/>
-                            <outlet property="delegate" destination="Xyk-AI-2Du" id="wuf-Co-Aqu"/>
+                            <outlet property="dataSource" destination="dRq-Wo-bLP" id="O8U-Sf-AJn"/>
+                            <outlet property="delegate" destination="dRq-Wo-bLP" id="jRY-b5-jev"/>
                         </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mhm-ID-5ra" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    </collectionView>
+                </collectionViewController>
             </objects>
-            <point key="canvasLocation" x="3273.5" y="1605"/>
+            <point key="canvasLocation" x="3273.5" y="1627"/>
         </scene>
         <!--Indstillinger-->
         <scene sceneID="V5F-Ue-WD8">
